--- a/static/web/css/style.styl
+++ b/static/web/css/style.styl
@@ -20,6 +20,9 @@ flex-direction(n)
   -ms-flex-direction n
   flex-direction n
 
+.background-grey
+  background-color: #eeeeee
+
 .btn
   font-family FontOdecopack
 
