--- a/templates/web/clientes.html
+++ b/templates/web/clientes.html
@@ -4,7 +4,7 @@
         {% if clientes_lista %}
             <div class="container-fluid">
                 <div class="container py-3" id="opinions">
-                    <h1 class="text-center mt-3 mb-3 font-up font-bold grey-text-2 wow fadeIn" data-wow-delay="0.2s">
+                    <h1 class="section-heading h1 pt-4 text-center text-sm-left">
                         CLIENTES</h1>
                     <div class="flex-center logos-panel">
 
