--- a/static/web/css/style.css
+++ b/static/web/css/style.css
@@ -4,6 +4,9 @@
   font-weight: normal;
   font-style: normal;
 }
+.background-grey {
+  background-color: #eee;
+}
 .btn {
   font-family: FontOdecopack;
 }
