Iconos Odecopack Personalizados fontastic

--- a/static/web/css/style.styl
+++ b/static/web/css/style.styl
@@ -1,3 +1,5 @@
+@import "OdecopackIcons.styl"
+
 $odecopack-color_1 = #ed6b00
 $odecopack-color_2 = #211915
 $odecopack-color_3 = white
@@ -163,6 +165,7 @@ header
     color white
   .barra-soluciones
     margin-top -9rem
+    font-family FontOdecopack
     .botones-soluciones
       .boton
         margin 0 !important
@@ -178,6 +181,7 @@ header
           background-image url("../img/fondo_botones_hover.jpg")
           background-repeat no-repeat
           background-size auto
+          color white !important
       a
         color inherit
         text-decoration inherit
