--- a/static/web/css/style.css
+++ b/static/web/css/style.css
@@ -1,4 +1,56 @@
 @font-face {
+  font-family: "odecopack";
+  src: url("../fonts/odecopack.eot");
+  src: url("../fonts/odecopack.eot?#iefix") format("embedded-opentype"), url("../fonts/odecopack.woff") format("woff"), url("../fonts/odecopack.ttf") format("truetype"), url("../fonts/odecopack.svg#odecopack") format("svg");
+}
+font-weight normal,
+font-style normal,
+[data-icon]:before {
+  font-family: "odecopack" !important;
+  content: attr(data-icon);
+  font-style: normal !important;
+  font-weight: normal !important;
+  font-variant: normal !important;
+  text-transform: none !important;
+  speak: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+[class^="icon-"]:before,
+[class*=" icon-"]:before {
+  font-family: "odecopack" !important;
+  font-style: normal !important;
+  font-weight: normal !important;
+  font-variant: normal !important;
+  text-transform: none !important;
+  speak: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.icon-belt:before {
+  content: "\61";
+}
+.icon-robot:before {
+  content: "\62";
+}
+.icon-belt-2:before {
+  content: "\63";
+}
+.icon-robot-1:before {
+  content: "\64";
+}
+.icon-robot-2:before {
+  content: "\65";
+}
+.icon-dashboard-1:before {
+  content: "\66";
+}
+.icon-dashboard:before {
+  content: "\67";
+}
+@font-face {
   font-family: 'FontOdecopack';
   src: url("../font/handel-gothic-d-bold/Handel_Gothic_D_Bold.eot") format('embedded-opentype'), url("../font/handel-gothic-d-bold/Handel_Gothic_D_Bold.woff2") format('woff2'), url("../font/handel-gothic-d-bold/Handel_Gothic_D_Bold.woff") format('woff'), url("../font/handel-gothic-d-bold/Handel_Gothic_D_Bold.ttf") format('truetype'), url("../font/handel-gothic-d-bold/Handel_Gothic_D_Bold.svg") format('svg');
   font-weight: normal;
@@ -160,6 +212,7 @@ header .full-bg-img {
 }
 .cabezote .barra-soluciones {
   margin-top: -9rem;
+  font-family: FontOdecopack;
 }
 .cabezote .barra-soluciones .botones-soluciones .boton {
   margin: 0 !important;
@@ -177,6 +230,7 @@ header .full-bg-img {
   background-image: url("../img/fondo_botones_hover.jpg");
   background-repeat: no-repeat;
   background-size: auto;
+  color: #fff !important;
 }
 .cabezote .barra-soluciones .botones-soluciones a {
   color: inherit;
