--- a/templates/web/base/cabezote_botones_soluciones.html
+++ b/templates/web/base/cabezote_botones_soluciones.html
@@ -7,10 +7,11 @@
                         <div class="col-6 col-sm-3 boton">
                             <a href="{{ solucion.get_absolute_url }}">
                                 <div class="contenido pt-2 pb-2 pl-2 pr-2 pt-md-5 pb-md-5">
-                                    <div class="icon {{ solucion.icono_class }}" style="font-size: 4rem"></div>
-                                    <h6 class="h6-responsive mt-2">
+                                    <div class="icon {{ solucion.icono_class }}" style="font-size: 4rem">
+                                        <h6 class="h6-responsive">
                                         <strong>{{ solucion.nombre }}</strong>
                                     </h6>
+                                    </div>
                                 </div>
                             </a>
                         </div>
