--- a/static/web/css/style.styl
+++ b/static/web/css/style.styl
@@ -174,7 +174,7 @@ header
         .contenido
           height 100%
           background-color white
-          color black
+          color gray
           border 1px solid $odecopack-color_5
         .contenido:hover
           border none
@@ -314,6 +314,7 @@ hr
     color white !important
     z-index 100
     .navbar-nav-soluciones
+      font-family FontOdecopack
       flex-direction (inherit)
       .nav-link-soluciones
         padding 0.5rem
@@ -321,8 +322,10 @@ hr
         font-style normal
         border-radius (25px)
   .btn-floating-categoria
+    font-family FontOdecopack
+    font-weight bold
     right 210px
-    font-size 0.8rem
+    font-size 0.9rem
     border-radius (25px)
     padding 0.5rem
     margin 0
