--- a/templates/web/empresa.html
+++ b/templates/web/empresa.html
@@ -1,5 +1,6 @@
 {% load static cache solo_tags imagekit %}
 {% get_solo 'web_configurations.LaEmpresaConfiguration' as empresa_configuracion %}
+{% get_solo 'web_configurations.CacheConfiguration' as cache_configuracion %}
 
 <div class="container index">
     <section id="empresa" class="section mt-3">
@@ -55,115 +56,115 @@
             </p>
         </div>
 
+        {% cache 86400 index_cache_empresa cache_configuracion.empresa_update %}
+            {% with galeria_fotos_list=galeria_fotos_empresa_list.all %}
+                {% if galeria_fotos_list %}
+                    <div class="row galeria-menu">
+                        <div class="col-xl-2 col-md-3">
+                            <ul class="nav nav-tabs md-pills pills-secondary flex-center" role="tablist">
+                                {% for galeria in galeria_fotos_list %}
+                                    <li class="nav-item">
+                                        <a class="nav-link dark-grey-text {% if forloop.first %}active{% endif %}"
+                                           data-toggle="tab"
+                                           href="#galeria-{{ galeria.pk }}"
+                                           role="tab"><i
+                                                class="fa {{ galeria.icono }} fa-2x"></i><br>{{ galeria.nombre }}</a>
+                                    </li>
+                                {% endfor %}
+                            </ul>
+                        </div>
 
-        {% with galeria_fotos_list=galeria_fotos_empresa_list.all %}
-            {% if galeria_fotos_list %}
-                <div class="row galeria-menu">
-                    <div class="col-xl-2 col-md-3">
-                        <ul class="nav nav-tabs md-pills pills-secondary flex-center" role="tablist">
-                            {% for galeria in galeria_fotos_list %}
-                                <li class="nav-item">
-                                    <a class="nav-link dark-grey-text {% if forloop.first %}active{% endif %}"
-                                       data-toggle="tab"
-                                       href="#galeria-{{ galeria.pk }}"
-                                       role="tab"><i
-                                            class="fa {{ galeria.icono }} fa-2x"></i><br>{{ galeria.nombre }}</a>
-                                </li>
-                            {% endfor %}
-                        </ul>
-                    </div>
+                        <div class="col-xl-10 col-md-9">
+                            <div class="tab-content vertical">
+                                {% for galeria in galeria_fotos_list %}
 
-                    <div class="col-xl-10 col-md-9">
-                        <div class="tab-content vertical">
-                            {% for galeria in galeria_fotos_list %}
+                                    {% cache 86400 cache_galeria galeria.pk galeria.modified %}
 
-                                {% cache 86400 cache_galeria galeria.pk galeria.modified %}
+                                        {% if galeria.marca_agua == 1 %}
+                                            {% generateimage 'webpage:watermark' source=galeria.imagen as imagen_procesada %}
+                                        {% elif galeria.marca_agua == 2 %}
+                                            {% generateimage 'webpage:watermark_orange' source=galeria.imagen as imagen_procesada %}
+                                        {% else %}
+                                            {% generateimage 'webpage:normal' source=galeria.imagen as imagen_procesada %}
+                                        {% endif %}
 
-                                    {% if galeria.marca_agua == 1 %}
-                                        {% generateimage 'webpage:watermark' source=galeria.imagen as imagen_procesada %}
-                                    {% elif galeria.marca_agua == 2 %}
-                                        {% generateimage 'webpage:watermark_orange' source=galeria.imagen as imagen_procesada %}
-                                    {% else %}
-                                        {% generateimage 'webpage:normal' source=galeria.imagen as imagen_procesada %}
-                                    {% endif %}
-
-                                    <div class="tab-pane fade show in {% if forloop.first %}active{% endif %}"
-                                         id="galeria-{{ galeria.pk }}"
-                                         role="tabpanel">
-                                        <br>
-                                        <div class="row">
-                                            <div class="col-md-6 col-12">
-                                                <figure class="m-0 p-0">
-                                                    <img src="{{ galeria.imagen_thumbnail.url }}" alt="">
-                                                </figure>
-                                            </div>
-                                            <div class="col-md-6 col-12 galeria">
-                                                <div class="mdb-lightbox">
-                                                    <div class="row">
-                                                        <figure class="col-4 col-lg-3 m-0 p-1">
-                                                            <a href="{{ imagen_procesada.url }}"
-                                                               data-size="{{ galeria.imagen.width|stringformat:"d" }}x{{ galeria.imagen.height|stringformat:"d" }}">
-                                                                <div class="view overlay hm-white-slight z-depth-2">
-                                                                    <img src="{{ galeria.imagen_thumbnail_galeria.url }}"
-                                                                         alt=""
-                                                                    >
+                                        <div class="tab-pane fade show in {% if forloop.first %}active{% endif %}"
+                                             id="galeria-{{ galeria.pk }}"
+                                             role="tabpanel">
+                                            <br>
+                                            <div class="row">
+                                                <div class="col-md-6 col-12">
+                                                    <figure class="m-0 p-0">
+                                                        <img src="{{ galeria.imagen_thumbnail.url }}" alt="">
+                                                    </figure>
+                                                </div>
+                                                <div class="col-md-6 col-12 galeria">
+                                                    <div class="mdb-lightbox">
+                                                        <div class="row">
+                                                            <figure class="col-4 col-lg-3 m-0 p-1">
+                                                                <a href="{{ imagen_procesada.url }}"
+                                                                   data-size="{{ galeria.imagen.width|stringformat:"d" }}x{{ galeria.imagen.height|stringformat:"d" }}">
+                                                                    <div class="view overlay hm-white-slight z-depth-2">
+                                                                        <img src="{{ galeria.imagen_thumbnail_galeria.url }}"
+                                                                             alt=""
+                                                                        >
+                                                                    </div>
+                                                                </a>
+                                                                <div class="caption">
+                                                                    <h3>
+                                                                        {{ galeria.nombre }}
+                                                                    </h3>
                                                                 </div>
-                                                            </a>
-                                                            <div class="caption">
-                                                                <h3>
-                                                                    {{ galeria.nombre }}
-                                                                </h3>
-                                                            </div>
-                                                        </figure>
+                                                            </figure>
 
-                                                        {% with mis_imagenes_list=galeria.mis_imagenes.all %}
-                                                            {% if mis_imagenes_list %}
-                                                                {% for imagen in mis_imagenes_list %}
-                                                                    <figure class="col-4 col-lg-3 m-0 p-1">
+                                                            {% with mis_imagenes_list=galeria.mis_imagenes.all %}
+                                                                {% if mis_imagenes_list %}
+                                                                    {% for imagen in mis_imagenes_list %}
+                                                                        <figure class="col-4 col-lg-3 m-0 p-1">
 
-                                                                        {% if imagen.marca_agua == 1 %}
-                                                                            {% generateimage 'webpage:watermark' source=imagen.imagen as imagen_procesada %}
-                                                                        {% elif imagen.marca_agua == 2 %}
-                                                                            {% generateimage 'webpage:watermark_orange' source=imagen.imagen as imagen_procesada %}
-                                                                        {% else %}
-                                                                            {% generateimage 'webpage:normal' source=imagen.imagen as imagen_procesada %}
-                                                                        {% endif %}
-
-                                                                        <a href="{{ imagen_procesada.url }}"
-                                                                           data-size="{{ imagen.imagen.width|stringformat:"d" }}x{{ imagen.imagen.height|stringformat:"d" }}">
-                                                                            <div class="view overlay hm-white-slight z-depth-2">
-                                                                                <img src="{{ imagen.imagen_thumbnail.url }}"
-                                                                                     alt="">
-                                                                            </div>
-                                                                        </a>
-                                                                        <div class="caption">
-                                                                            <h3>
-                                                                                {{ galeria.nombre }}
-                                                                            </h3>
-                                                                            {% if imagen.descripcion %}
-                                                                                <p>{{ imagen.descripcion }}</p>
+                                                                            {% if imagen.marca_agua == 1 %}
+                                                                                {% generateimage 'webpage:watermark' source=imagen.imagen as imagen_procesada %}
+                                                                            {% elif imagen.marca_agua == 2 %}
+                                                                                {% generateimage 'webpage:watermark_orange' source=imagen.imagen as imagen_procesada %}
+                                                                            {% else %}
+                                                                                {% generateimage 'webpage:normal' source=imagen.imagen as imagen_procesada %}
                                                                             {% endif %}
-                                                                        </div>
-                                                                    </figure>
-                                                                {% endfor %}
-                                                            {% endif %}
-                                                        {% endwith %}
+
+                                                                            <a href="{{ imagen_procesada.url }}"
+                                                                               data-size="{{ imagen.imagen.width|stringformat:"d" }}x{{ imagen.imagen.height|stringformat:"d" }}">
+                                                                                <div class="view overlay hm-white-slight z-depth-2">
+                                                                                    <img src="{{ imagen.imagen_thumbnail.url }}"
+                                                                                         alt="">
+                                                                                </div>
+                                                                            </a>
+                                                                            <div class="caption">
+                                                                                <h3>
+                                                                                    {{ galeria.nombre }}
+                                                                                </h3>
+                                                                                {% if imagen.descripcion %}
+                                                                                    <p>{{ imagen.descripcion }}</p>
+                                                                                {% endif %}
+                                                                            </div>
+                                                                        </figure>
+                                                                    {% endfor %}
+                                                                {% endif %}
+                                                            {% endwith %}
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
 
-                                {% endcache %}
-                            {% endfor %}
+                                    {% endcache %}
+                                {% endfor %}
+                            </div>
                         </div>
+                        <!--/Second column-->
                     </div>
-                    <!--/Second column-->
-                </div>
-                <!--/First row-->
-            {% endif %}
-        {% endwith %}
-
+                    <!--/First row-->
+                {% endif %}
+            {% endwith %}
+        {% endcache %}
     </section>
 </div>
 
@@ -177,11 +178,13 @@
                     NUESTROS ALIADOS</h4>
                 <div class="flex-center logos-panel">
                     <div class="row justify-content-center text-white text-center wow fadeIn" data-wow-delay="0.2s">
-                        {% for aliado in aliados_lista %}
-                            <div class="col-lg-2 col-md-3 col-4">
-                                <img src="{{ aliado.logo.url }}" alt="{{ aliado.logo.nombre }}" class="img-fluid">
-                            </div>
-                        {% endfor %}
+                        {% cache 86400 index_cache_empresa_aliados cache_configuracion.empresa_update %}
+                            {% for aliado in aliados_lista %}
+                                <div class="col-lg-2 col-md-3 col-4">
+                                    <img src="{{ aliado.logo.url }}" alt="{{ aliado.logo.nombre }}" class="img-fluid">
+                                </div>
+                            {% endfor %}
+                        {% endcache %}
                     </div>
                 </div>
             </div>
